1. Added content for 1st edition 2. Updated About section 3. Added speaker section with info 4. Modified the color scheme to orange

--- a/content/2015-08.html
+++ b/content/2015-08.html
@@ -1,8 +1,15 @@
 ---
 start: 2015-08-08 09:30
-edition: 1
+edition: 2
 participate: "" 
 talk: ""
+
+about: "<h4>Digital Strategy & Next Gen Customer Experience</h4>
+    <p data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">The theme for this edition of Converge is <strong>“Digital Strategy & Next Gen Customer Experience\"</strong>.</p>
+    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">Customer experience has been going through a major shift for quite sometime. Given the number of channels the customer can interact with, the demography using those channels, the advances in microelectronics and information technology; customer experience as a whole needs to be rethought and continuously enriched.</p>
+    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">Digital strategy at a very high level is about creating the right experiences to match customer needs and continuous customer engagement. Current businesses have digital strategy as a separate stream to manage their digital growth.</p>
+    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">Register now to attend the event. As an attendee, you will get to connect with like minded peers and gain insight from industry practitioners. </p>
+    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">Food and refreshments will be provided. Attendance is free of charge. If you have any questions write to us at <em>converge-chennai@thoughtworks.com</em>.</p>"
 
 agenda:
   -
@@ -40,4 +47,26 @@ agenda:
   -
     time: "16:30"
     title: "Quick retro, snacks, networking and fun"
+
+speaker:
+  -
+    name: "Vijay Anand"
+    designation: "Vice President - Sulekha.com"
+    description: "Vijay Anand has been with the firm from 2002 across sales, marketing and strategy roles. He's an avid book reader, passionate in fitness and a marathon runner"
+  -
+    name: "Mukund Venkataraman"
+    designation: "Co-founder and Creative Director - Banana Brandworks"
+    description: "Banana Brandworks is a branding and advertising agency based out of Chennai. Mukund works with global brands including Michelin and Hyatt. Mukund is a passionate photographer and an avid traveller who loves to dwell into the lines that bind art, creativity and communication."
+  -
+    name: "Ranjith Melarkode"
+    designation: "CTO, SPI Cinemas"
+    description: "Ranjith Melarkode has spent the last decade and more trying to derive order from chaos in IT. Currently using his experience to transform customer engagement, drive innovation and revenues. Has a passion for meditation, fitness and looking to rekindle his love for music"
+  -
+    name: "Bhavesh Shah"
+    designation: "Head of Experience, SPI Cinemas."
+    description: "Bhavesh brings vast experience in running Food and Beverage for SPI Cinemas. He now leads the effort to define and enhance customer experience. Has a passion for gaming, photography with food always getting a special place in his heart."
+  -
+    name: "Suvish Viswanathan"
+    designation: "Head of Marketing - India and South East Asia, ADP"
+    description: "Suvish loves talking about technology and believes to solve today's complex problems, technology needs to be simple and cost effective. Prior to ADP, he spent half a decade immersed in the world of product marketing and building analyst relations for ZOHO. While at ZOHO, Suvish traveled extensively to several countries evangelizing the IT management solutions to technical as well as 'C' level executives."
 ---
