removed geeknight, added image, fixed speakers section

--- a/content/2015-08.html
+++ b/content/2015-08.html
@@ -49,24 +49,26 @@ agenda:
     title: "Quick retro, snacks, networking and fun"
 
 speaker:
-  -
-    name: "Vijay Anand"
-    designation: "Vice President - Sulekha.com"
-    description: "Vijay Anand has been with the firm from 2002 across sales, marketing and strategy roles. He's an avid book reader, passionate in fitness and a marathon runner"
-  -
-    name: "Mukund Venkataraman"
-    designation: "Co-founder and Creative Director - Banana Brandworks"
-    description: "Banana Brandworks is a branding and advertising agency based out of Chennai. Mukund works with global brands including Michelin and Hyatt. Mukund is a passionate photographer and an avid traveller who loves to dwell into the lines that bind art, creativity and communication."
-  -
-    name: "Ranjith Melarkode"
-    designation: "CTO, SPI Cinemas"
-    description: "Ranjith Melarkode has spent the last decade and more trying to derive order from chaos in IT. Currently using his experience to transform customer engagement, drive innovation and revenues. Has a passion for meditation, fitness and looking to rekindle his love for music"
-  -
-    name: "Bhavesh Shah"
-    designation: "Head of Experience, SPI Cinemas."
-    description: "Bhavesh brings vast experience in running Food and Beverage for SPI Cinemas. He now leads the effort to define and enhance customer experience. Has a passion for gaming, photography with food always getting a special place in his heart."
-  -
-    name: "Suvish Viswanathan"
-    designation: "Head of Marketing - India and South East Asia, ADP"
-    description: "Suvish loves talking about technology and believes to solve today's complex problems, technology needs to be simple and cost effective. Prior to ADP, he spent half a decade immersed in the world of product marketing and building analyst relations for ZOHO. While at ZOHO, Suvish traveled extensively to several countries evangelizing the IT management solutions to technical as well as 'C' level executives."
+  left:
+    -
+      name: "Vijay Anand"
+      designation: "Vice President - Sulekha.com"
+      description: "Vijay Anand has been with the firm from 2002 across sales, marketing and strategy roles. He's an avid book reader, passionate in fitness and a marathon runner"
+    -
+      name: "Ranjith Melarkode"
+      designation: "CTO, SPI Cinemas"
+      description: "Ranjith Melarkode has spent the last decade and more trying to derive order from chaos in IT. Currently using his experience to transform customer engagement, drive innovation and revenues. Has a passion for meditation, fitness and looking to rekindle his love for music"
+    -
+      name: "Suvish Viswanathan"
+      designation: "Head of Marketing - India and South East Asia, ADP"
+      description: "Suvish loves talking about technology and believes to solve today's complex problems, technology needs to be simple and cost effective. Prior to ADP, he spent half a decade immersed in the world of product marketing and building analyst relations for ZOHO. While at ZOHO, Suvish traveled extensively to several countries evangelizing the IT management solutions to technical as well as 'C' level executives."
+  right:
+    -
+      name: "Mukund Venkataraman"
+      designation: "Co-founder and Creative Director - Banana Brandworks"
+      description: "Banana Brandworks is a branding and advertising agency based out of Chennai. Mukund works with global brands including Michelin and Hyatt. Mukund is a passionate photographer and an avid traveller who loves to dwell into the lines that bind art, creativity and communication."
+    -
+      name: "Bhavesh Shah"
+      designation: "Head of Experience, SPI Cinemas"
+      description: "Bhavesh brings vast experience in running Food and Beverage for SPI Cinemas. He now leads the effort to define and enhance customer experience. Has a passion for gaming, photography with food always getting a special place in his heart."
 ---
