added participant and speakers registration form for aug 8 edition

--- a/content/2015-08.html
+++ b/content/2015-08.html
@@ -1,8 +1,8 @@
 ---
 start: 2015-08-08 09:30
 edition: 2
-participate: "" 
-talk: ""
+participate: "https://docs.google.com/forms/d/1WW5K--hIo6G-9QrdnZYrVKDepXoPlmvVP3FyXbD8bjs/viewform" 
+talk: "https://docs.google.com/forms/d/1_K7Fwipkx1QEVk7RzkO4r3M7QyDB2kCkP5NCtefYCqk/viewform"
 
 about: "<h4>Digital Strategy & Next Gen Customer Experience</h4>
     <p data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">The theme for this edition of Converge is <strong>“Digital Strategy & Next Gen Customer Experience\"</strong>.</p>
