added marketo form and added separate pages for form, changed theme for aug 8 edition, changed font to open sans

--- a/content/2015-08.html
+++ b/content/2015-08.html
@@ -1,14 +1,15 @@
 ---
 start: 2015-08-08 09:30
 edition: 2
-participate: "https://docs.google.com/forms/d/1WW5K--hIo6G-9QrdnZYrVKDepXoPlmvVP3FyXbD8bjs/viewform" 
-talk: "https://docs.google.com/forms/d/1_K7Fwipkx1QEVk7RzkO4r3M7QyDB2kCkP5NCtefYCqk/viewform"
+participate: "participate.html" 
+talk: "speaker.html"
 
-about: "<h4>Digital Strategy & Next Gen Customer Experience</h4>
-    <p data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">The theme for this edition of Converge is <strong>“Digital Strategy & Next Gen Customer Experience\"</strong>.</p>
-    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">Customer experience has been going through a major shift for quite sometime. Given the number of channels the customer can interact with, the demography using those channels, the advances in microelectronics and information technology; customer experience as a whole needs to be rethought and continuously enriched.</p>
-    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">Digital strategy at a very high level is about creating the right experiences to match customer needs and continuous customer engagement. Current businesses have digital strategy as a separate stream to manage their digital growth.</p>
-    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">Register now to attend the event. As an attendee, you will get to connect with like minded peers and gain insight from industry practitioners. </p>
+about: "<h4>Collective Intelligence: Connectifying</h4>
+    <p data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">The theme for this edition of Converge is <strong>\"Collective Intelligence: Connectifying\"</strong>.</p>
+    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">We are nothing short of amazed when machine and man communicate, in movies like Terminator. The age this comes to light is not very far. In fact, we are experiencing such transformation this very moment in many forms.</p>
+    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">Internet of Things is the name of the game in today’s world. Where man and machine collaborate, ideate and bring together an unparalleled level of intelligence. Businesses collaborate to enhance customer experience. The everyday customer is more tech savvy than you could possibly imagine. </p>
+    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">This edition of converge, we explore the endless possibilities of collective intelligence. Merging man, machine and internet…</p>
+    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">Register now to attend the event. As an attendee, you will get to connect with like minded peers and gain insight from industry leaders and network with peers.</p>
     <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">Food and refreshments will be provided. Attendance is free of charge. If you have any questions write to us at <em>converge-chennai@thoughtworks.com</em>.</p>"
 
 agenda:
