--- a/content/2015-01.html
+++ b/content/2015-01.html
@@ -13,39 +13,39 @@ about: "<h4>Digital Strategy & Next Gen Customer Experience</h4>
 
 agenda:
   -
-    time: "9:30"
+    time: "9:30 AM"
     title: "Registration"
   -
-    time: "10:00"
+    time: "10:00 AM"
     title: "Key Note"
   -
-    time: "10:15"
+    time: "10:15 AM"
     title: "Digital Strategy & Customer Experience in Local Services - Vijay Anand K"
     subtitle: "* Local Service Definition & Scope * Consumer & Small-and-medium Business (SMB) changes * Industry participants & how they responded * ‘Uberization’ of local services – what’s likely in next 2-4 years"
   -
-    time: "11:00"
+    time: "11:00 AM"
     title: "\"Hi There Digital\" - Mukund Venkataraman"
     subtitle: "While creating digital experiences we often get lost in the functionality of design. The truth is that people talk to digital interfaces. There is a conversation between the user and the website/app. The applications which offers the most engaging conversation succeeds. Mukund takes you through the need to decode the brand persona first before thinking of the user experience."
   -
-    time: "11:40"
+    time: "11:40 AM"
     title: "Coffee Break"
   -
-    time: "12:00"
+    time: "12:00 PM"
     title: "Re-Imagining the Movie Theatre Experience - Ranjith M & Bhavesh Shah"
     subtitle: "Ranjith and Bhavesh will talk about a possible model for how a business can shape their customer experience and also cover the SPI cinemas experience in brief."
   -
-    time: "12:45"
+    time: "12:45 PM"
     title: "Building a community of champion customers. - Suvish Viswanathan"
     subtitle: "Oftentimes the first interaction of your customers with your brand is not with your sales, website or even your product/services. Their buying decision is heavily influenced by their peers. In this community driven economy, how can you build a community of champion customers. Where does the process begin? At the product level, the support or the brand itself? Once you identify and start your journey, how can you leverage the best out of your customer's relationship with you to spread the word."
   -
-    time: "13:15"
+    time: "01:15 PM"
     title: "Networking Lunch"
   -
-    time: "14:30"
+    time: "02:30 PM"
     title: "Workshop on Design Thinking - Rajavel, Experience Designer @ThoughtWorks"
     subtitle: "Activity where the participants learn to Empathise + Define + Solution + Prototype + Test / apply it back to current world"
   -
-    time: "16:30"
+    time: "04:30 PM"
     title: "Quick retro, snacks, networking and fun"
 
 speaker:
