--- a/content/2015-08.html
+++ b/content/2015-08.html
@@ -4,8 +4,8 @@ edition: 2
 participate: "participate.html" 
 talk: "speaker.html"
 
-about: "<h4>Collective Intelligence: Connectifying</h4>
-    <p data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">The theme for this edition of Converge is <strong>\"Collective Intelligence: Connectifying\"</strong>.</p>
+about: "<h4>Collective Intelligence: Man, Machine and Internet</h4>
+    <p data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">The theme for this edition of Converge is <strong>\"Collective Intelligence: Man, Machine and Internet\"</strong>.</p>
     <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">We are nothing short of amazed when machine and man communicate, in movies like Terminator. The age this comes to light is not very far. In fact, we are experiencing such transformation this very moment in many forms.</p>
     <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">Internet of Things is the name of the game in today’s world. Where man and machine collaborate, ideate and bring together an unparalleled level of intelligence. Businesses collaborate to enhance customer experience. The everyday customer is more tech savvy than you could possibly imagine. </p>
     <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">This edition of converge, we explore the endless possibilities of collective intelligence. Merging man, machine and internet…</p>
@@ -14,62 +14,57 @@ about: "<h4>Collective Intelligence: Connectifying</h4>
 
 agenda:
   -
-    time: "9:30"
-    title: "Registration"
+    time: "9:00 AM"
+    title: "Sign in and Welcome"
   -
-    time: "10:00"
-    title: "Key Note"
+    time: "9:30 AM"
+    title: "Welcome Note"
   -
-    time: "10:15"
-    title: "Digital Strategy & Customer Experience in Local Services - Vijay Anand K"
-    subtitle: "* Local Service Definition & Scope * Consumer & Small-and-medium Business (SMB) changes * Industry participants & how they responded * ‘Uberization’ of local services – what’s likely in next 2-4 years"
+    time: "09:45 AM"
+    title: "IoT for the smarter world - Naveen Sabapathy"
+    subtitle: "*Biggest Technology Wave is here *IoT Interactions with consumer and Industrial world * Sensors networks and Big Data * Challenges in IoT solutions * What to look out through this exciting change *"
   -
-    time: "11:00"
-    title: "\"Hi There Digital\" - Mukund Venkataraman"
-    subtitle: "While creating digital experiences we often get lost in the functionality of design. The truth is that people talk to digital interfaces. There is a conversation between the user and the website/app. The applications which offers the most engaging conversation succeeds. Mukund takes you through the need to decode the brand persona first before thinking of the user experience."
+    time: "11:00 AM"
+    title: "Tea Break"
   -
-    time: "11:40"
-    title: "Coffee Break"
+    time: "11:15 AM"
+    title: "Connecting the local scrap dealers and recycle materials to Art dealers - Siddharth Hande"
+    subtitle: "* Geo Spatial view on waste management * Creation of a sustainable environment through social network * Self organization using Technology in informal industry* "
   -
-    time: "12:00"
-    title: "Re-Imagining the Movie Theatre Experience - Ranjith M & Bhavesh Shah"
-    subtitle: "Ranjith and Bhavesh will talk about a possible model for how a business can shape their customer experience and also cover the SPI cinemas experience in brief."
+    time: "12:20 PM"
+    title: "Digital Disruption in India and ThoughtWorks point of view on way forward - Sujatha K, Bharani S"
   -
-    time: "12:45"
-    title: "Building a community of champion customers. - Suvish Viswanathan"
-    subtitle: "Oftentimes the first interaction of your customers with your brand is not with your sales, website or even your product/services. Their buying decision is heavily influenced by their peers. In this community driven economy, how can you build a community of champion customers. Where does the process begin? At the product level, the support or the brand itself? Once you identify and start your journey, how can you leverage the best out of your customer's relationship with you to spread the word."
+    time: "12:50 PM"
+    title: "Lunch"
   -
-    time: "13:15"
-    title: "Networking Lunch"
+    time: "02:00 PM"
+    title: "Workshop - Building a Smart City"
+    subtitle: "* Hands on workshop * Uses design principles * Collaborative Decision Making * Influencing Skills * Having Fun towards problem solving *"
   -
-    time: "14:30"
-    title: "Workshop on Design Thinking - Rajavel, Experience Designer @ThoughtWorks"
-    subtitle: "Activity where the participants learn to Empathise + Define + Solution + Prototype + Test / apply it back to current world"
-  -
-    time: "16:30"
-    title: "Quick retro, snacks, networking and fun"
+    time: "04:00 PM"
+    title: "Wrap up, Snacks and Retro"
 
 speaker:
   left:
     -
-      name: "Vijay Anand"
-      designation: "Vice President - Sulekha.com"
-      description: "Vijay Anand has been with the firm from 2002 across sales, marketing and strategy roles. He's an avid book reader, passionate in fitness and a marathon runner"
+      name: "Naveen Sabapathy"
+      designation: "Co-founder & President, Nimble Wireless"
+      description: ""
     -
-      name: "Ranjith Melarkode"
-      designation: "CTO, SPI Cinemas"
-      description: "Ranjith Melarkode has spent the last decade and more trying to derive order from chaos in IT. Currently using his experience to transform customer engagement, drive innovation and revenues. Has a passion for meditation, fitness and looking to rekindle his love for music"
+      name: "Santosh Subramanium"
+      designation: "Founder of Bambaram, Khel planet"
+      description: ""
     -
-      name: "Suvish Viswanathan"
-      designation: "Head of Marketing - India and South East Asia, ADP"
-      description: "Suvish loves talking about technology and believes to solve today's complex problems, technology needs to be simple and cost effective. Prior to ADP, he spent half a decade immersed in the world of product marketing and building analyst relations for ZOHO. While at ZOHO, Suvish traveled extensively to several countries evangelizing the IT management solutions to technical as well as 'C' level executives."
+      name: "Siddharth Hande"
+      designation: "Founder, Kabadiwalla Connect"
+      description: "Siddharth is the founder of Kabadiwalla Connect, which is a social enterprise in the field of waste management."
   right:
     -
-      name: "Mukund Venkataraman"
-      designation: "Co-founder and Creative Director - Banana Brandworks"
-      description: "Banana Brandworks is a branding and advertising agency based out of Chennai. Mukund works with global brands including Michelin and Hyatt. Mukund is a passionate photographer and an avid traveller who loves to dwell into the lines that bind art, creativity and communication."
+      name: "Sujatha K"
+      designation: "Research Analyst, ThoughtWorks"
+      description: "Sujatha analyzes market trends extensively with keen insights"
     -
-      name: "Bhavesh Shah"
-      designation: "Head of Experience, SPI Cinemas"
-      description: "Bhavesh brings vast experience in running Food and Beverage for SPI Cinemas. He now leads the effort to define and enhance customer experience. Has a passion for gaming, photography with food always getting a special place in his heart."
+      name: "Bharani S"
+      designation: "Office Tech Principal, ThoughtWorks"
+      description: "Bharani is responsible for bringing cutting edge solution to fruition for clients"
 ---
