changed a topic detail

--- a/content/2015-08.html
+++ b/content/2015-08.html
@@ -32,7 +32,7 @@ agenda:
     subtitle: "* Geo Spatial view on waste management * Creation of a sustainable environment through social network * Self organization using Technology in informal industry* "
   -
     time: "12:20 PM"
-    title: "Digital Disruption in India and ThoughtWorks point of view on way forward - Sujatha K, Bharani S"
+    title: "The Digital Future of IT service providers and ThoughtWorks' take on it - Sujatha K, Bharani S"
   -
     time: "12:50 PM"
     title: "Lunch"
@@ -62,7 +62,6 @@ speaker:
     -
       name: "Sujatha K"
       designation: "Research Analyst, ThoughtWorks"
-      description: "Sujatha analyzes market trends extensively with keen insights"
     -
       name: "Bharani S"
       designation: "Office Tech Principal, ThoughtWorks"
