[DD/Kandan] Added speakers image

--- a/content/2015-08.html
+++ b/content/2015-08.html
@@ -5,12 +5,11 @@ participate: "participate.html"
 talk: "speaker.html"
 
 about: "<h4>Collective Intelligence: Man, Machine and Internet</h4>
-    <p data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">The theme for this edition of Converge is <strong>\"Collective Intelligence: Man, Machine and Internet\"</strong>.</p>
-    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">We are nothing short of amazed when machine and man communicate, in movies like Terminator. The age this comes to light is not very far. In fact, we are experiencing such transformation this very moment in many forms.</p>
-    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">Internet of Things is the name of the game in today’s world. Where man and machine collaborate, ideate and bring together an unparalleled level of intelligence. Businesses collaborate to enhance customer experience. The everyday customer is more tech savvy than you could possibly imagine. </p>
+    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\"> Terminator, Enders Game, Star Wars and Back to the Future...we are nothing short of amazed when man and machine communicate in these movies. The age this comes to light is not very far. In fact, we are experiencing such transformation this very moment in many forms.</p>
+    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\"> Businesses collaborate to enhance customer experience. The everyday customer is more tech savvy than you could possibly imagine. Internet of Things is the name of the game in today’s world where man and machine collaborate, ideate and bring together an unparalleled level of intelligence.</p>
     <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">This edition of converge, we explore the endless possibilities of collective intelligence. Merging man, machine and internet…</p>
-    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">Register now to attend the event. As an attendee, you will get to connect with like minded peers and gain insight from industry leaders and network with peers.</p>
-    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">Food and refreshments will be provided. Attendance is free of charge. If you have any questions write to us at <em>converge-chennai@thoughtworks.com</em>.</p>"
+    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">Register now to attend the event and get blown away. What more, you get to meet people, gain industry insights and have loads of fun.</p>
+    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\"> Registration is free; food and refreshments are available. If you like to know more or have any questions, write to us at <em>converge-chennai@thoughtworks.com</em>.</p>"
 
 agenda:
   -
@@ -22,17 +21,17 @@ agenda:
   -
     time: "09:45 AM"
     title: "IoT for the smarter world - Naveen Sabapathy"
-    subtitle: "*Biggest Technology Wave is here *IoT Interactions with consumer and Industrial world * Sensors networks and Big Data * Challenges in IoT solutions * What to look out through this exciting change *"
+    subtitle: "* Biggest Technology Wave is here * IoT Interactions with consumer and Industrial world * Sensors networks and Big Data * Challenges in IoT solutions * What to look out through this exciting change *"
   -
     time: "11:00 AM"
     title: "Tea Break"
   -
     time: "11:15 AM"
-    title: "Connecting the local scrap dealers and recycle materials to Art dealers - Siddharth Hande"
+    title: "Connecting the local scrap dealers and recycle materials with Art dealers - Siddharth Hande"
     subtitle: "* Geo Spatial view on waste management * Creation of a sustainable environment through social network * Self organization using Technology in informal industry* "
   -
     time: "12:20 PM"
-    title: "The Digital Future of IT service providers and ThoughtWorks' take on it - Sujatha K, Bharani S"
+    title: "The Digital Future of IT service providers - Sujatha K, Bharani S"
   -
     time: "12:50 PM"
     title: "Lunch"
@@ -49,21 +48,27 @@ speaker:
     -
       name: "Naveen Sabapathy"
       designation: "Co-founder & President, Nimble Wireless"
-      description: ""
+      description: "Naveen co founded Nimble Wireless that provides IoT/M2M services. He is responsible for Sales, Product Strategy and Business Development"
+      speaker_image: Naveen_Sabapathy.png
     -
       name: "Santosh Subramanium"
-      designation: "Founder of Bambaram, Khel planet"
-      description: ""
+      designation: "Founder of Bambaram, Khel Planet"
+      description: "Santhosh founded Khel Planet, a not for profit organization that nurtures life skills in children. He also founded Bambaram, an online rental library for toys, books and science kits"
+      speaker_image: Santhosh_Subramaniam.png
     -
       name: "Siddharth Hande"
       designation: "Founder, Kabadiwalla Connect"
-      description: "Siddharth is the founder of Kabadiwalla Connect, which is a social enterprise in the field of waste management."
+      description: "Siddharth is the founder of Kabadiwalla Connect, which is a social enterprise in the field of waste management"
+      speaker_image: Siddarth_Hande.png
   right:
     -
       name: "Sujatha K"
       designation: "Research Analyst, ThoughtWorks"
+      description: " Sujatha is responsible for extensive market analysis and research to bring new perspectives to the table"
+      speaker_image: Sujatha_Chozhan.png
     -
       name: "Bharani S"
       designation: "Office Tech Principal, ThoughtWorks"
       description: "Bharani is responsible for bringing cutting edge solution to fruition for clients"
+      speaker_image: Bharani_Subramaniam.png
 ---
