[DD] made some changes

--- a/content/2015-08.html
+++ b/content/2015-08.html
@@ -4,7 +4,7 @@ edition: 2
 participate: "participate.html" 
 talk: "speaker.html"
 
-about: "<h4>Collective Intelligence: Man, Machine and Internet</h4>
+about: "<h4>Collective Intelligence: <br> Man, Machine and Internet</h4>
     <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\"> Terminator, Enders Game, Star Wars and Back to the Future...we are nothing short of amazed when man and machine communicate in these movies. The age this comes to light is not very far. In fact, we are experiencing such transformation this very moment in many forms.</p>
     <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\"> Businesses collaborate to enhance customer experience. The everyday customer is more tech savvy than you could possibly imagine. Internet of Things is the name of the game in today’s world where man and machine collaborate, ideate and bring together an unparalleled level of intelligence.</p>
     <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">This edition of converge, we explore the endless possibilities of collective intelligence. Merging man, machine and internet…</p>
