[DD] some changes

--- a/content/2015-08.html
+++ b/content/2015-08.html
@@ -9,7 +9,7 @@ about: "<h4>Collective Intelligence: <br> Man, Machine and Internet</h4>
     <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\"> Businesses collaborate to enhance customer experience. The everyday customer is more tech savvy than you could possibly imagine. Internet of Things is the name of the game in today’s world where man and machine collaborate, ideate and bring together an unparalleled level of intelligence.</p>
     <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">This edition of converge, we explore the endless possibilities of collective intelligence. Merging man, machine and internet…</p>
     <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">Register now to attend the event and get blown away. What more, you get to meet people, gain industry insights and have loads of fun.</p>
-    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\"> Registration is free; food and refreshments are available. If you like to know more or have any questions, write to us at <em>converge-chennai@thoughtworks.com</em>.</p>"
+    <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\"> If you like to know more or have any questions, write to us at <em>converge-chennai@thoughtworks.com</em>.</p>"
 
 agenda:
   -
@@ -37,7 +37,7 @@ agenda:
     title: "Lunch"
   -
     time: "02:00 PM"
-    title: "Workshop - Building a Smart City"
+    title: "Workshop - Building a Smart City - Santosh Subramanium"
     subtitle: "* Hands on workshop * Uses design principles * Collaborative Decision Making * Influencing Skills * Having Fun towards problem solving *"
   -
     time: "04:00 PM"
