[Arun] changed spelling of speaker

--- a/content/2015-08.html
+++ b/content/2015-08.html
@@ -53,7 +53,7 @@ speaker:
     -
       name: "Santosh Subramanium"
       designation: "Founder of Bambaram, Khel Planet"
-      description: "Santhosh founded Khel Planet, a not for profit organization that nurtures life skills in children. He also founded Bambaram, an online rental library for toys, books and science kits"
+      description: "Santosh founded Khel Planet, a not for profit organization that nurtures life skills in children. He also founded Bambaram, an online rental library for toys, books and science kits"
       speaker_image: Santhosh_Subramaniam.png
     -
       name: "Siddharth Hande"
