added youtube link

--- a/content/2015-08.html
+++ b/content/2015-08.html
@@ -18,20 +18,22 @@ agenda:
   -
     time: "9:30 AM"
     title: "Welcome Note"
+    subtitle: "<a href='https://www.youtube.com/watch?v=8dXzNWIvBIg'>Watch on YouTube</a>"
   -
     time: "09:45 AM"
     title: "IoT for the smarter world - Naveen Sabapathy"
-    subtitle: "* Biggest Technology Wave is here * IoT Interactions with consumer and Industrial world * Sensors networks and Big Data * Challenges in IoT solutions * What to look out through this exciting change *"
+    subtitle: "* Biggest Technology Wave is here * IoT Interactions with consumer and Industrial world * Sensors networks and Big Data * Challenges in IoT solutions * What to look out through this exciting change *</br><a href='https://www.youtube.com/watch?v=WAKePNCYNsk'>Watch on YouTube</a>"
   -
     time: "11:00 AM"
     title: "Tea Break"
   -
     time: "11:15 AM"
     title: "Connecting the local scrap dealers and recycle materials with Art dealers - Siddharth Hande"
-    subtitle: "* Geo Spatial view on waste management * Creation of a sustainable environment through social network * Self organization using Technology in informal industry* "
+    subtitle: "* Geo Spatial view on waste management * Creation of a sustainable environment through social network * Self organization using Technology in informal industry*</br><a href='https://www.youtube.com/watch?v=CNrpy4G5IiM'>Watch on YouTube</a>"
   -
     time: "12:20 PM"
     title: "The Digital Future of IT service providers - Sujatha K, Bharani S"
+    subtitle: "</br><a href='https://www.youtube.com/watch?v=CKn6u0iUhOE'>Watch on YouTube</a>"
   -
     time: "12:50 PM"
     title: "Lunch"
