--- a/content/2015-08.html
+++ b/content/2015-08.html
@@ -18,11 +18,11 @@ agenda:
   -
     time: "9:30 AM"
     title: "Welcome Note"
-    subtitle: "<a href='https://www.youtube.com/watch?v=8dXzNWIvBIg'>Watch on YouTube</a>"
+    subtitle: "<a href='http://www.slideshare.net/ThoughtWorks/collective-intelligence-man-machine-and-internet-converge-chennai-2015'>View Presentation</a>|<a href='https://www.youtube.com/watch?v=8dXzNWIvBIg'>Watch on YouTube</a>"
   -
     time: "09:45 AM"
     title: "IoT for the smarter world - Naveen Sabapathy"
-    subtitle: "* Biggest Technology Wave is here * IoT Interactions with consumer and Industrial world * Sensors networks and Big Data * Challenges in IoT solutions * What to look out through this exciting change *</br><a href='https://www.youtube.com/watch?v=WAKePNCYNsk'>Watch on YouTube</a>"
+    subtitle: "* Biggest Technology Wave is here * IoT Interactions with consumer and Industrial world * Sensors networks and Big Data * Challenges in IoT solutions * What to look out through this exciting change *</br><a href='http://www.slideshare.net/ThoughtWorks/internet-of-things-building-a-smarter-world-51452217'>View Presentation</a>|<a href='https://www.youtube.com/watch?v=WAKePNCYNsk'>Watch on YouTube</a>"
   -
     time: "11:00 AM"
     title: "Tea Break"
@@ -33,14 +33,14 @@ agenda:
   -
     time: "12:20 PM"
     title: "The Digital Future of IT service providers - Sujatha K, Bharani S"
-    subtitle: "</br><a href='https://www.youtube.com/watch?v=CKn6u0iUhOE'>Watch on YouTube</a>"
+    subtitle: "</br><a href='http://www.slideshare.net/ThoughtWorks/digital-future-of-it-service-providers-converge-chennai-2015'>View Presentation</a>|<a href='https://www.youtube.com/watch?v=CKn6u0iUhOE'>Watch on YouTube</a>"
   -
     time: "12:50 PM"
     title: "Lunch"
   -
     time: "02:00 PM"
     title: "Workshop - Building a Smart City - Santosh Subramanium"
-    subtitle: "* Hands on workshop * Uses design principles * Collaborative Decision Making * Influencing Skills * Having Fun towards problem solving *"
+    subtitle: "* Hands on workshop * Uses design principles * Collaborative Decision Making * Influencing Skills * Having Fun towards problem solving *</br><a href='http://www.slideshare.net/ThoughtWorks/build-a-city'>View Presentation</a>"
   -
     time: "04:00 PM"
     title: "Wrap up, Snacks and Retro"
