added one presentation

--- a/content/2015-08.html
+++ b/content/2015-08.html
@@ -29,7 +29,7 @@ agenda:
   -
     time: "11:15 AM"
     title: "Connecting the local scrap dealers and recycle materials with Art dealers - Siddharth Hande"
-    subtitle: "* Geo Spatial view on waste management * Creation of a sustainable environment through social network * Self organization using Technology in informal industry*</br><a href='https://www.youtube.com/watch?v=CNrpy4G5IiM'>Watch on YouTube</a>"
+    subtitle: "* Geo Spatial view on waste management * Creation of a sustainable environment through social network * Self organization using Technology in informal industry*</br><a href='http://www.slideshare.net/ThoughtWorks/connecting-kabadiwale'>View Presentation</a>|<a href='https://www.youtube.com/watch?v=CNrpy4G5IiM'>Watch on YouTube</a>"
   -
     time: "12:20 PM"
     title: "The Digital Future of IT service providers - Sujatha K, Bharani S"
