--- a/content/2016-03.html
+++ b/content/2016-03.html
@@ -1,7 +1,7 @@
 ---
 start: 2016-03-02 05:00
 edition: 3
-participate: "/" 
+participate: "http://twchennai.github.io/converge/" 
 talk: "speaker.html"
 
 about: "<h4>Internet of Things - Looking beyond software</h4>
