[LN/Arun] added agenda, speakers for march 2016 edition

--- a/content/2016-03.html
+++ b/content/2016-03.html
@@ -1,7 +1,7 @@
 ---
 start: 2016-03-02 05:00
 edition: 3
-participate: "http://twchennai.github.io/converge/" 
+participate: "participate.html" 
 talk: "speaker.html"
 
 about: "<h4>Internet of Things - Looking beyond software</h4>
@@ -13,11 +13,55 @@ This is our focus point at this edition of Converge, Chennai. </p>
 For more, write to converge-chennai@thoughtworks.com</p>"
 
 agenda:
-  
+  -
+    time: "5:00 PM"
+    title: "Registration"
+  -
+    time: "5:10 PM"
+    title: "Welcome Note"
+    subtitle: ""
+  -
+    time: "5:20 PM"
+    title: "A project in Industrial IoT - Vidhya Sriram"
+    subtitle: "Providing connected solutions for industrial applications"
+  -
+    time: "6:00 PM"
+    title: "How it all comes together - Abhinav M"
+  -
+    time: "6:40 PM"
+    title: "To Trim The Feet Or Trim The Shoes? - Mani HK , Mayukhini Pande"
+    subtitle: "How to build lean IoT products without hurting the user's feet, when time and money are your scarce resource"
+  -
+    time: "7:20 PM"
+    title: "Thank you Note & Felicitations"
+  -
+    time: "7:40 PM"
+    title: "Networking Dinner"
 
 speaker:
   left:
-
+    -
+      name: "Vidhya Sriram"
+      link: "https://www.linkedin.com/in/vidhya-sriram-17493454"
+      designation: "Director, <a href='http://www.pspctrappedkeyinterlocks.com/'>PS Power Controls, PSPC Exports (P) Ltd.</a>"
+      description: "Experienced Professional, with 17 years experience in Management - Manufacturing"
+    -
+      name: "Abhinav M"
+      link: "https://in.linkedin.com/in/abhinav-manchanda-5064489"
+      designation: "Application Developer, ThoughtWorks"
+      description: "Abhinav serves ThoughtWorks in the capacity of a Senior Consultant with over nine years of experience in the creation of complex applications. His main area of focus recently has been Mobile Applications, with an expertise in Android"
+      speaker_image: abhinav_m.jpg
   right:
-
+    -
+      name: "Mani HK"
+      link: "https://www.linkedin.com/in/manihk"
+      designation: "<a href='http://greenopia.co'>Greenopia</a>"
+      description: "Serial Entrepreneur who started his first company at age 13"
+      speaker_image: manihk.jpg
+    -
+      name: "Mayukhini Pande"
+      link: "https://www.linkedin.com/in/mayukhinipande"
+      designation: "<a href='http://greenopia.co'>Greenopia</a>"
+      description: "Experienced in both qualitative, field-based research methods such as Ethnography as well as quantitative, lab-based research methods and their application to design problems"
+      speaker_image: mayukhini_pande.jpg
 ---
