added talk description for abhinav

--- a/content/2016-03.html
+++ b/content/2016-03.html
@@ -27,6 +27,7 @@ agenda:
   -
     time: "6:00 PM"
     title: "How it all comes together - Abhinav M"
+    subtitle: "When everything will become connected, there are some devices that will become the interface between us the humans, and our connected devices"
   -
     time: "6:40 PM"
     title: "To Trim The Feet Or Trim The Shoes? - Mani HK , Mayukhini Pande"
@@ -49,7 +50,7 @@ speaker:
       name: "Abhinav M"
       link: "https://in.linkedin.com/in/abhinav-manchanda-5064489"
       designation: "Application Developer, ThoughtWorks"
-      description: "Abhinav serves ThoughtWorks in the capacity of a Senior Consultant with over nine years of experience in the creation of complex applications. His main area of focus recently has been Mobile Applications, with an expertise in Android"
+      description: "Abhinav serves ThoughtWorks in the capacity of a Lead Consultant with over nine years of experience in the creation of complex applications. His main area of focus recently has been Mobile Applications, with an expertise in Android"
       speaker_image: abhinav_m.jpg
   right:
     -
