[Arun] added fb, twitter share button, added photo of one speaker

--- a/content/2016-03.html
+++ b/content/2016-03.html
@@ -1,7 +1,7 @@
 ---
 start: 2016-03-02 05:00
 edition: 3
-participate: "participate.html" 
+participate: "participate.html"
 talk: "speaker.html"
 
 about: "<h4>Internet of Things - Looking beyond software</h4>
@@ -46,6 +46,7 @@ speaker:
       link: "https://www.linkedin.com/in/vidhya-sriram-17493454"
       designation: "Director, <a href='http://www.pspctrappedkeyinterlocks.com/'>PS Power Controls, PSPC Exports (P) Ltd.</a>"
       description: "Experienced Professional, with 17 years experience in Management - Manufacturing"
+      speaker_image: vidhya_sriram.jpg
     -
       name: "Abhinav M"
       link: "https://in.linkedin.com/in/abhinav-manchanda-5064489"
