--- a/content/2017-07.html
+++ b/content/2017-07.html
@@ -4,7 +4,7 @@ edition: 1
 participate: "https://www.eventbrite.com/e/converge-hyderabad-tickets-36360016789"
 talk: ""
 
-about: "<h4>Accelerating Business Transformation through Effective Business Analysis</h4>
+about: "<h4>Accelerating Business Transformation</h4><h5> Being the Effective Agents of Change</h5>
     <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">World around us is going through a rapid transformation, with disruptive innovations constantly at its doorstep. Technological innovations are the means to derive a competitive advantage and transform business models.</p>
     <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">As a player in this transformation journey there is a greater sense of urgency to be agile and nimble, ability to alter and scale up the business models in line with the rapidly changing technology environment, and also be a part of this change by pushing the boundaries of innovation within the organisation.</p>
     <p id=\"_about\" data--100-bottom-top=\"transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0\" data--100-bottom=\"transform:perspective(400px) rotateX(0deg) scale(1)\">How are you embracing this change that is your affecting business today ? This is our focus point at this edition of Converge, Hyderabad.</p>
@@ -19,8 +19,8 @@ agenda:
     title: "Welcome Note"
   -
     time: "10:00 AM - 11:00 AM"
-    title: "Jayesh Ghatge"
-    subtitle: "As the Business Analysis profession continues on its development path, BA practitioners are refusing to just deliver business requirements specifications and models but are increasingly looking at leveraging their core analysis techniques to deliver significant benefit across the entire organizational change spectrum thinking holistically."
+    title: "Holistic Thinking in the era of Digital Complexity - by Jayesh Ghatge "
+    subtitle: "<p>Forrester predicts that <strong>every business that exists today will undergo significant change in the next five years.</strong> </p><p>While disruptive innovations are shaping up the experience age through technological advancements that are appearing rapidly and simultaneously, how can you make a difference to your client and organization ?</p>"
   -
     time: "11:00 AM  - 11:15 AM "
     title: "Break"
@@ -29,8 +29,8 @@ agenda:
     title: "Group Discussion"
   -
     time: "11:45 AM - 12:45 PM"
-    title: "Managing Innovation by Nidhi Pathki and Naga Sujan Mehra"
-    subtitle: "“Innovation” has been a buzz word for a while now and has attracted substantial investments. To derive greatest value out of an innovation, Its important to streamline it with the overall company objectives and processes. When Innovations compliment existing products and processes instead of being stand-alone or siloed, the benefit derived is much more. "
+    title: "Managing Innovation - by Nidhi Pathki and Naga Sujan Mehra"
+    subtitle: "“Innovation” has been a buzzword for a while now and has attracted substantial investments. To derive greatest value out of an innovation, It is important to streamline it with the overall company objectives and processes. When Innovations complement existing products and processes instead of being stand-alone or siloed, the benefit derived is much more."
   -
     time: "2:45 PM - 1:00 PM"
     title: "Closing Notes"
@@ -42,16 +42,24 @@ speaker:
   left:
     -
       name: "Jayesh Ghatge"
-      designation: "Dont Know"
-      description: ""
+      designation: "Market Partner - India, ThoughtWorks"
+      description: "Jayesh is the Market Partner, heading the domestic India Business portfolio for ThoughtWorks from creating demand to delivering value to our customers. He is working closely with leaders of disruptive and innovative companies in India.
+      He is responsible for growing ThoughtWorks footprint in the India market and helping customers strategize and deliver their ambitious technology missions.
+      Jayesh’s current interests include frugal innovation, digital strategy and business agility. He is a avid cyclist and photographer as well."
+      speaker_image: "jayesh_ghatge.jpg"
+      link: "https://www.linkedin.com/in/jayeshghatge76/?ppe=1"
     -
       name: "Nidhi Pathki"
-      designation: "Lead Consultant"
-      description: "Nidhi believes that being a business analyst is adventurous in a world where the probable solutions for a problem change faster than the problem itself. Over past many years, she has been trying to keep up with the emerging problems and solutions in an ever-rapidly changing business landscape"
+      designation: "Senior Business Analyst, ThoughtWorks"
+      description: "Nidhi believes that being a business analyst is adventurous in a world where the probable solutions for a problem change faster than the problem itself. Over past many years, she has been trying to keep up with the emerging problems and solutions in an ever-rapidly changing business landscape."
+      speaker_image: "nidhi.jpg"
+      link: "https://www.linkedin.com/in/nidhipathki"
 
   right:
     -
       name: "Naga Sujan Mehra Machiraju"
-      designation: "Senior Consultant"
+      designation: "Business Analyst, ThoughtWorks"
       description: "Mehra's constant endeavour to explore different problems in diverse domains helped her gain experience in domains like education, marketing and retail. Her focus areas are product development, innovative solutions and user experience."
+      speaker_image: "mehra.jpg"
+      link: "https://www.linkedin.com/in/naga-sujan-mehra-machiraju-86623a15"
 ---
