[Anil:Murali] changed image style and link to open in new tab

--- a/content/2017-07.html
+++ b/content/2017-07.html
@@ -16,7 +16,7 @@ agenda:
     title: "Registration"
   -
     time: "9:45 AM - 10:00 AM"
-    title: "Welcome Note"
+    title: "Key Note Address - Madhubala Mukthinutalapati"
   -
     time: "10:00 AM - 11:00 AM"
     title: "Holistic Thinking in the era of Digital Complexity - by Jayesh Ghatge "
@@ -46,7 +46,7 @@ speaker:
       description: "Jayesh is the Market Partner, heading the domestic India Business portfolio for ThoughtWorks from creating demand to delivering value to our customers. He is working closely with leaders of disruptive and innovative companies in India.
       He is responsible for growing ThoughtWorks footprint in the India market and helping customers strategize and deliver their ambitious technology missions.
       Jayesh’s current interests include frugal innovation, digital strategy and business agility. He is a avid cyclist and photographer as well."
-      speaker_image: "jayesh_ghatge.jpg"
+      speaker_image: "jayesh_ghatge.png"
       link: "https://www.linkedin.com/in/jayeshghatge76/?ppe=1"
 
   right:
@@ -58,7 +58,7 @@ speaker:
       link: "https://www.linkedin.com/in/naga-sujan-mehra-machiraju-86623a15"
     -
       name: "Nidhi Pathki"
-      designation: "Senior Business Analyst, ThoughtWorks"
+      designation: "Lead Business Analyst, ThoughtWorks"
       description: "Nidhi believes that being a business analyst is adventurous in a world where the probable solutions for a problem change faster than the problem itself. Over past many years, she has been trying to keep up with the emerging problems and solutions in an ever-rapidly changing business landscape."
       speaker_image: "nidhi.jpg"
       link: "https://www.linkedin.com/in/nidhipathki"
