--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
        data-bottom="transform:translateY(-5em)" data--100-bottom="transform:translateY(0)">
     <div class="large-12 columns social">
       <a rel="nofollow" href="https://www.linkedin.com/grp/home?gid=6748221" target="_blank" title="LinkedIn Group" onclick="ga('send', 'event', 'social', 'linked-in')"><i class="icon-linkedin"></i></a>
-      <a rel="nofollow" href="mailto:converge-hyderabad@thoughtworks.com" title="Email us" onclick="ga('send', 'event', 'social', 'email')"><i class="icon-mail"></i></a>
-      <a rel="nofollow" href="https://www.facebook.com/Convergencr/?notif_t=page_admin&notif_id=1500622426320227" title="FB Group" onclick="ga('send', 'event', 'social', 'facebook')"><i class="icon-facebook-official"></i></a>
+      <a target="_blank" rel="nofollow" href="mailto:converge-hyderabad@thoughtworks.com" title="Email us" onclick="ga('send', 'event', 'social', 'email')"><i class="icon-mail"></i></a>
+      <a target="_blank" rel="nofollow" href="https://www.facebook.com/Convergencr/?notif_t=page_admin&notif_id=1500622426320227" title="FB Group" onclick="ga('send', 'event', 'social', 'facebook')"><i class="icon-facebook-official"></i></a>
       <!-- NOTE: Last video link is line-wrapping in small screens like iOS a rel="nofollow" href="#" title="Videos (coming soon)"><i class="icon-youtube"></i></a -->
     </div>
   </div>
 
   <div class="row">
     <div class="large-12 columns" data-anchor-target="#_about">
-      <h4>Accelerating Business Transformation</h4><h5> Being the Effective Agents of Change</h5> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">World around us is going through a rapid transformation, with disruptive innovations constantly at its doorstep. Technological innovations are the means to derive a competitive advantage and transform business models.</p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">As a player in this transformation journey there is a greater sense of urgency to be agile and nimble, ability to alter and scale up the business models in line with the rapidly changing technology environment, and also be a part of this change by pushing the boundaries of innovation within the organisation.</p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">How are you embracing this change that is your affecting business today ? This is our focus point at this edition of Converge, Hyderabad.</p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">Food and refreshments will be provided. Attendance is free of charge. If you have any questions write to us at <em>converge-hyderabad@thoughtworks.com</em>.</p>
+      <h4>Accelerating Business Transformation</h4><h5> Being the Effective Agents of Change</h5> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">World around us is going through a rapid transformation, with disruptive innovations constantly at its doorstep. Technological innovations are the means to derive a competitive advantage and transform business models.</p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">As a player in this transformation journey there is a greater sense of urgency to be agile and nimble, ability to alter and scale up the business models in line with the rapidly changing technology environment, and also be a part of this change by pushing the boundaries of innovation within the organisation.</p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">How are you embracing this change that is affecting your business today ?</p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">Food and refreshments will be provided. Attendance is free of charge. If you have any questions write to us at <em>converge-hyderabad@thoughtworks.com</em>.</p>
     </div>
     <div class="large-12 columns">
       <div class="fb-share-button" data-href="https://twhyderabad.github.io/converge/" data-layout="button_count"></div>
@@ -375,7 +375,7 @@
         <div class="large-4 columns address" data--100-bottom-top="transform:translateX(-100%)" data--100-bottom="transform:translateX(0)">
             <p>
 
-                <span>ThoughtWorks Technologies Pvt Ltd</span>
+                <span>ThoughtWorks Technologies Pvt. Ltd.</span>
                 <span>3rd Floor, Apurupa Silpi, Beside H.P. Petrol Bunk, KFC Building</span>
                 <span>Rajiv gandhi Nagar, Gachibowli</span>
                 <span>Hyderabad, Telangana 500032</span>
